Misc. border and spacing fixes

--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -7,7 +7,8 @@
 
   --border-radius: 0
 
-  --border-color: #{'rgba(var(--primary-text-color-rgb), .4)'}
+  --border-color: #{'rgba(var(--primary-text-color-rgb), .3)'}
+  --header-border-color: #{'rgba(var(--primary-text-color-rgb), .3)'}
 
   --background-color: #{"{{ theme.background_color }}"}
   --content-background-color: #{"{{ theme.content_background_color }}"}
