--- a/source/stylesheets/announcement.sass
+++ b/source/stylesheets/announcement.sass
@@ -8,7 +8,7 @@
   font-size: 1rem
   justify-content: center
   line-height: 1.25em
-  padding: 22px 96px
+  padding: 22px 120px
   position: relative
   text-align: center
   width: 100%
@@ -27,13 +27,16 @@
     justify-content: center
     padding: 0
     position: absolute
-    right: 32px
+    right: 64px
     top: 50%
     transform: translateY(-50%)
     width: 32px
 
+    @media screen and (max-width: $break-large)
+      right: 24px
+
     @media screen and (max-width: $break-small)
-      right: 16px
+      right: 12px
 
   &__close-icon
     height: 14px
