--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -96,6 +96,7 @@ section.content
       width: 100%
 
   .cart-item-detail
+    max-width: 400px
     padding-right: 24px
 
     @media (max-width: $break-medium)
