--- a/source/stylesheets/navigation.sass
+++ b/source/stylesheets/navigation.sass
@@ -2,7 +2,7 @@ header
   +transition(height .4s)
   +flex-shrink(0)
   background: var(--content-background-color)
-  border-bottom: 2px solid var(--border-color)
+  border-bottom: 2px solid var(--header-border-color)
   height: var(--header-height)
   font-size: 1.1em
   line-height: 1.2rem
