--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -135,11 +135,11 @@
   +justify-content(center)
   background: var(--button-background-color)
   text-align: center
-  height: 64px
+  height: 48px
   padding: 0
   position: relative
   text-decoration: none
-  width: 64px
+  width: 48px
 
   &:not(.disabled):hover, &:not(.disabled):focus
     background: var(--button-background-color)
@@ -152,7 +152,7 @@
 
   &.disabled
     cursor: not-allowed
-    opacity: .7
+    opacity: .8
 
   svg
     display: block
@@ -161,4 +161,5 @@
     width: 16px
 
 .pagination-caption
+  font-size: 1.1em
   margin-left: 32px
